Division-En-Parrafos/compiling_error.txt
C:\Users\eugenioLeal\OneDrive - Instituto Tecnologico y de Estudios Superiores de Monterrey\Documents\semestreAgosto2017-Algo-BDatos-VideoJ\Algoritmos\Algorithm-Design-Homework-3\Division-En-Parrafos\main.cpp: In function 'int* getLengthOfWordArr(std::string*, int)':
C:\Users\eugenioLeal\OneDrive - Instituto Tecnologico y de Estudios Superiores de Monterrey\Documents\semestreAgosto2017-Algo-BDatos-VideoJ\Algoritmos\Algorithm-Design-Homework-3\Division-En-Parrafos\main.cpp:3:39: error: expected ']' before ';' token
 #define MAX_WORDS_IN_PARAGRAPH 1000000;
                                       ^
C:\Users\eugenioLeal\OneDrive - Instituto Tecnologico y de Estudios Superiores de Monterrey\Documents\semestreAgosto2017-Algo-BDatos-VideoJ\Algoritmos\Algorithm-Design-Homework-3\Division-En-Parrafos\main.cpp:5:14: note: in expansion of macro 'MAX_WORDS_IN_PARAGRAPH'
   int result[MAX_WORDS_IN_PARAGRAPH];
              ^
C:\Users\eugenioLeal\OneDrive - Instituto Tecnologico y de Estudios Superiores de Monterrey\Documents\semestreAgosto2017-Algo-BDatos-VideoJ\Algoritmos\Algorithm-Design-Homework-3\Division-En-Parrafos\main.cpp:5:36: error: expected primary-expression before ']' token
   int result[MAX_WORDS_IN_PARAGRAPH];
                                    ^
C:\Users\eugenioLeal\OneDrive - Instituto Tecnologico y de Estudios Superiores de Monterrey\Documents\semestreAgosto2017-Algo-BDatos-VideoJ\Algoritmos\Algorithm-Design-Homework-3\Division-En-Parrafos\main.cpp:5:36: error: expected ';' before ']' token
C:\Users\eugenioLeal\OneDrive - Instituto Tecnologico y de Estudios Superiores de Monterrey\Documents\semestreAgosto2017-Algo-BDatos-VideoJ\Algoritmos\Algorithm-Design-Homework-3\Division-En-Parrafos\main.cpp:7:5: error: 'result' was not declared in this scope
     result[i] = wordArr[i].length();
     ^
C:\Users\eugenioLeal\OneDrive - Instituto Tecnologico y de Estudios Superiores de Monterrey\Documents\semestreAgosto2017-Algo-BDatos-VideoJ\Algoritmos\Algorithm-Design-Homework-3\Division-En-Parrafos\main.cpp:9:10: error: 'result' was not declared in this scope
   return result;
          ^
C:\Users\eugenioLeal\OneDrive - Instituto Tecnologico y de Estudios Superiores de Monterrey\Documents\semestreAgosto2017-Algo-BDatos-VideoJ\Algoritmos\Algorithm-Design-Homework-3\Division-En-Parrafos\main.cpp: In function 'int main(int, const char**)':
C:\Users\eugenioLeal\OneDrive - Instituto Tecnologico y de Estudios Superiores de Monterrey\Documents\semestreAgosto2017-Algo-BDatos-VideoJ\Algoritmos\Algorithm-Design-Homework-3\Division-En-Parrafos\main.cpp:3:39: error: expected ']' before ';' token
 #define MAX_WORDS_IN_PARAGRAPH 1000000;
                                       ^
C:\Users\eugenioLeal\OneDrive - Instituto Tecnologico y de Estudios Superiores de Monterrey\Documents\semestreAgosto2017-Algo-BDatos-VideoJ\Algoritmos\Algorithm-Design-Homework-3\Division-En-Parrafos\main.cpp:14:23: note: in expansion of macro 'MAX_WORDS_IN_PARAGRAPH'
   int lengthOfWordArr[MAX_WORDS_IN_PARAGRAPH] = getLengthOfWordArr(wordArr, n);
                       ^
C:\Users\eugenioLeal\OneDrive - Instituto Tecnologico y de Estudios Superiores de Monterrey\Documents\semestreAgosto2017-Algo-BDatos-VideoJ\Algoritmos\Algorithm-Design-Homework-3\Division-En-Parrafos\main.cpp:14:45: error: expected primary-expression before ']' token
   int lengthOfWordArr[MAX_WORDS_IN_PARAGRAPH] = getLengthOfWordArr(wordArr, n);
                                             ^
C:\Users\eugenioLeal\OneDrive - Instituto Tecnologico y de Estudios Superiores de Monterrey\Documents\semestreAgosto2017-Algo-BDatos-VideoJ\Algoritmos\Algorithm-Design-Homework-3\Division-En-Parrafos\main.cpp:14:45: error: expected ';' before ']' token
